--- a/src/components/StackHeader.astro
+++ b/src/components/StackHeader.astro
@@ -14,7 +14,7 @@ const { title, href } = Astro.props;
     <MoveLeft />
   </a>
 
-  <div class="title flex justify-center flex-1 font-[500] text-md text-center items-center">
+  <div class="title flex justify-center flex-1 font-medium text-md text-center items-center">
     {title}
   </div>
 </div>
