--- a/src/base/layouts/MobileLayout.astro
+++ b/src/base/layouts/MobileLayout.astro
@@ -10,19 +10,17 @@ const { title = "Chapters", showBottomBar = true } = Astro.props;
 ---
 
 <div
-  class="flex flex-col items-center min-h-screen mx-auto max-w-lg rounded-md"
+  class="flex flex-col items-center min-h-screen max-w-lg mx-auto"
 >
-  {/* Top Section */}
-
   {/* Content Section */}
-  <main class="flex-1 w-full mx-auto relative bg-slate-100/70">
+  <main class="flex-1 w-full mx-auto relative bg-background">
     <slot />
   </main>
 
   {/* Bottom Navigation */}
   {
     showBottomBar && (
-      <footer class="w-full bg-white  mt-auto rounded-tl-lg rounded-tr-lg sticky shadow bottom-0">
+      <footer class="w-full bg-white mt-auto rounded-tl-lg rounded-tr-lg sticky shadow bottom-0">
         <div class="flex justify-around p-2 py-4 text-black text-sm">
           <a href="/" class="chapters flex flex-col items-center">
             <TableOfContents />
