--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,10 @@ const sortedChapters = chapters.sort(
 
 <BaseHead
   title="Bhagavad Gita - Complete Chapters with Slok, Meaning & Commentary | Geeta.Prasuco.com"
-  description={"Read the complete Bhagavad Gita online — all 18 chapters with original Sanskrit sloks, English and Nepali meanings, and chapter summaries. Experience the wisdom of Lord Krishna’s teachings in a simple, modern way."}
+  description={"Read the complete Bhagavad Gita online — all 18 chapters with original Sanskrit sloks, English and Nepali meanings, and chapter summaries. Experience the wisdom of Lord Krishna's teachings in a simple, modern way."}
 >
   <MobileLayout>
-    <div class="main m-2 gap-2 flex flex-col">
+    <div class="m-2 gap-2 flex flex-col">
       {sortedChapters.map((chapter) => <ChapterItem data={chapter} />)}
     </div>
   </MobileLayout>
