--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -110,7 +110,7 @@ import StackHeader from "../components/StackHeader.astro";
       >
         <h2 class="text-lg font-medium text-primary">Data Source</h2>
         <p
-          class="text-sm leading-relaxed"
+          class=" leading-relaxed"
           style="color: var(--color-text-primary)"
         >
           The content in this application is based on data from{" "}
@@ -123,6 +123,14 @@ import StackHeader from "../components/StackHeader.astro";
             gita/gita
           </a>
           , which has been heavily manipulated and processed for this implementation.
+        </p>
+        <p>
+          The diction audio of all sanskrit verses are from <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-primary hover:underline"
+            href="https://jkyog.org">jkyog</a
+          >.
         </p>
       </section>
     </div>
