--- a/src/pages/geeta-mail/index.astro
+++ b/src/pages/geeta-mail/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import BaseHead from "../../base/BaseHead.astro";
 ---
 
@@ -26,7 +27,6 @@ import BaseHead from "../../base/BaseHead.astro";
     <div
       class="max-w-5xl mx-auto flex flex-col gap-5 justify-center items-center text-black px-4 py-16"
     >
-
       <h1 class="text-center text-4xl md:text-7xl font-black leading-tight">
         Geeta In
         <span class="bg-[#EA4335] text-white px-3 py-1"> Mail </span>
@@ -47,7 +47,6 @@ import BaseHead from "../../base/BaseHead.astro";
         Bhagavad Gita every morning; explained in simple words and connected to
         real-life problems like stress, confusion, and decision-making.
       </p>
-
 
       <form
         method="get"
