--- a/src/base/BaseHead.astro
+++ b/src/base/BaseHead.astro
@@ -13,6 +13,7 @@ const {
   description = "Bhagavad Gita |  Complete Chapters with Slok, Meaning & Commentary | Geeta.Prasuco.com",
   title,
 } = Astro.props;
+export const prerender = true;
 ---
 
 <!doctype html>
