--- a/src/components/StackHeader.astro
+++ b/src/components/StackHeader.astro
@@ -7,6 +7,7 @@ type Props = {
 };
 
 const { title, href } = Astro.props;
+export const prerender = true;
 ---
 
 <div class="sticky top-0 z-20 flex items-center p-4 bg-white">
